5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1578_1328.log
== TEST (2019-03-13 12:31:01) 
-- CODE:
20*35=print(700)
-- ERROR:
File "XXXX", line 1
    20*35=print(700)
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:31:28) 
-- CODE:
print(20*35=700)
-- ERROR:
File "XXXX", line 1
    print(20*35=700)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:31:38) 
-- CODE:
print(700)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:31:41) 
-- CODE:
print(700)
-- EXECUTION TIME:
0.141849
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 13:12:01) 
-- CODE:
print(35*20)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:12:04) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.140897
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:18:04) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.196804
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:41:02) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.139395
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:05:23) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.156871
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 15:19:56) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.145355
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 15:23:56) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.141076
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
